--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,20 +2,8 @@ name: CI
 
 on:
   push:
-    paths:
-      - 'src/**'
-      - 'tests/**'
-      - 'pyproject.toml'
-      - 'tox.ini'
-      - '.github/workflows/ci.yml'
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
-    paths:
-      - 'src/**'
-      - 'tests/**'
-      - 'pyproject.toml'
-      - 'tox.ini'
-      - '.github/workflows/ci.yml'
 
 concurrency:
   group: ci-${{ github.workflow }}-${{ github.ref }}
@@ -28,10 +16,60 @@ env:
 
 jobs:
   # ============================================
+  # Should-Run Check - Determines if CI is needed
+  # ============================================
+  should-run:
+    name: Check if CI needed
+    runs-on: ubuntu-latest
+    outputs:
+      run_ci: ${{ steps.check.outputs.run_ci }}
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - name: Check changed files
+      id: check
+      run: |
+        # For main branch: always run
+        if [ "${{ github.ref }}" == "refs/heads/main" ]; then
+          echo "run_ci=true" >> $GITHUB_OUTPUT
+          echo "Main branch - CI required"
+          exit 0
+        fi
+
+        # For PRs targeting main: always run
+        if [ "${{ github.base_ref }}" == "main" ]; then
+          echo "run_ci=true" >> $GITHUB_OUTPUT
+          echo "PR to main - CI required"
+          exit 0
+        fi
+
+        # For other cases: check if relevant files changed
+        if [ "${{ github.event_name }}" == "pull_request" ]; then
+          BASE_SHA="${{ github.event.pull_request.base.sha }}"
+        else
+          BASE_SHA="${{ github.event.before }}"
+        fi
+
+        CHANGED_FILES=$(git diff --name-only $BASE_SHA ${{ github.sha }} 2>/dev/null || echo "")
+        
+        # Check if any relevant files changed
+        if echo "$CHANGED_FILES" | grep -qE '^(src/|tests/|pyproject\.toml|tox\.ini|\.github/workflows/ci\.yml)'; then
+          echo "run_ci=true" >> $GITHUB_OUTPUT
+          echo "Relevant files changed - CI required"
+        else
+          echo "run_ci=false" >> $GITHUB_OUTPUT
+          echo "No relevant files changed - CI skipped"
+        fi
+
+  # ============================================
   # Lint Job - All branches
   # ============================================
   lint:
     name: Lint (Ruff)
+    needs: should-run
+    if: needs.should-run.outputs.run_ci == 'true'
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -53,6 +91,8 @@ jobs:
   # ============================================
   type:
     name: Type Check (mypy)
+    needs: should-run
+    if: needs.should-run.outputs.run_ci == 'true'
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -76,6 +116,8 @@ jobs:
   # ============================================
   test:
     name: Test (py${{ matrix.python-version }}, ${{ matrix.os }})
+    needs: should-run
+    if: needs.should-run.outputs.run_ci == 'true'
     runs-on: ${{ matrix.os }}
     timeout-minutes: 15
     strategy:
@@ -156,17 +198,25 @@ jobs:
   # ============================================
   summary:
     name: ✅ All Checks
-    needs: [lint, type, test]
+    needs: [should-run, lint, type, test]
     runs-on: ubuntu-latest
     timeout-minutes: 3
     if: always()
     steps:
     - name: Check job results
       run: |
+        echo "Should-Run: ${{ needs.should-run.outputs.run_ci }}"
         echo "Lint: ${{ needs.lint.result }}"
         echo "Type: ${{ needs.type.result }}"
         echo "Test: ${{ needs.test.result }}"
         
+        # If CI was skipped, all jobs will be 'skipped' - that's OK
+        if [ "${{ needs.should-run.outputs.run_ci }}" == "false" ]; then
+          echo "CI was skipped (no relevant changes) - Passed"
+          exit 0
+        fi
+        
+        # If CI ran, check actual results
         if [ "${{ needs.lint.result }}" != "success" ] || \
            [ "${{ needs.type.result }}" != "success" ] || \
            [ "${{ needs.test.result }}" != "success" ]; then
